force-app/main/default/objects/TrialforceTemplates__c/TrialforceTemplates__c.object-meta.xml
<CustomObject>
    <label>Trialforce Template</label>
    <nameField>
        <displayFormat>TT-{00000000}</displayFormat>
        <label>TrialforceTemplateNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trialforce Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>