force-app/main/default/objects/TrialforceTemplates__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this template available for use?</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>