force-app/main/default/objects/TrialforceTemplates__c/fields/TemplateID__c.field-meta.xml
<CustomField>
    <fullName>TemplateID__c</fullName>
    <description>Trialforce Template ID</description>
    <label>Template ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>